[project]
name = "bus-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Benyamin Ginzburg", email = "benyomin.94@gmail.com"},
]
dependencies = [
    "fastapi[websockets]==0.111.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "uvicorn==0.30.4",
    "httpx==0.27.0",
    "betterlogging",
    "apscheduler==3.10.4",
    "psycopg[binary]==3.2.1",
    "shapely==2.0.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
