[project]
name = "bus-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Benyamin Ginzburg", email = "benyomin.94@gmail.com"},
]
dependencies = [
    "fastapi==0.138.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "uvicorn==0.49.0",
    "httpx==0.28.1",
    "betterlogging",
    "apscheduler==3.11.3",
    "psycopg[binary]==3.3.4",
    "shapely==2.1.2",
    "websockets==15.0.1",
    "mcp==1.28.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
